# ocaml-chat

./: .gitignore  README.md  dune-project  opposite_client.py  opposite_server.py
_build/: .db  .digest-db  log
_build/default/: README.md  tcp_server_ocaml.dune-package  tcp_server_ocaml.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: tcp_server_ocaml.cma  tcp_server_ocaml.cmxa  tcp_server_ocaml.cmxs
_build/default/lib/.merlin-conf/: lib-tcp_server_ocaml
_build/default/lib/.tcp_server_ocaml.objs/byte/: tcp_server_ocaml.cmi  tcp_server_ocaml.cmo  tcp_server_ocaml.cmt
_build/default/lib/.tcp_server_ocaml.objs/native/: tcp_server_ocaml.cmx
_build/default/test/.merlin-conf/: exe-test_tcp_server_ocaml
_build/default/test/.test_tcp_server_ocaml.eobjs/byte/: dune__exe__Test_tcp_server_ocaml.cmi  dune__exe__Test_tcp_server_ocaml.cmti
_build/default/test/.test_tcp_server_ocaml.eobjs/native/: dune__exe__Test_tcp_server_ocaml.cmx
_build/install/default/lib/tcp_server_ocaml/: META  dune-package  opam
lib/: dune  input.ml  input.mli
test/: dune
